--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,16 @@ button:active {
   border-color: #33059e;
 }
 
+button:disabled,
+button:disabled:active,
+button:disabled:hover {
+  background-color: #ccc;
+  border-color: #292929;
+	border-color: #ccc;
+	cursor: not-allowed;
+}
+
+
 .form-actions {
   text-align: right;
 }
